# domainfy

./: .gitignore  README.md  pyproject.toml  setup.py
src/domainfy/: __main__.py  cli.py  domainfy.py  notify_mac.py
tests/: test_notify_mac.py
