[tool.poetry]
name = "domainfy"
version = "0.1.1"
description = "Notify available domain"
authors = ["Douglas Barbosa <douglas.b.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
pip = "^23.3.2"
install = "^1.3.5"
urllib3 = "^2.1.0"
pytest = "^7.4.4"
click = "^8.1.7"
setuptools = "^69.0.3"
wheel = "^0.42.0"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.2"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
blue = "^0.9.1"
ruff = "^0.1.13"
isort = "^5.13.2"
ipdb = "^0.13.13"

[tool.blue]
extend-exclude = '(migrations/)'


[tool.ruff]
line-length = 79
exclude = ['.venv', 'migrations'] # no check


[tool.isort]
profile = "black"
line_length = 79
src_paths = ["src/domainfy", "tests"]
honor_noqa = true
extend_skip = ['migrations']

[tool.pytest.ini_options]
pythonpath = "."

[tool.taskipy.tasks]
lint = 'ruff . && blue --check . --diff'
format = 'blue .  && isort .'
run = 'python -m domainfy'
pre_test = 'task lint'
test = 'pytest -s -x --cov=domainfy -vv'
post_test = 'coverage html'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
